--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,7 @@
   from = "/sitemap.xml"
   to = "/sitemap.xml"
   status = 200
+[[headers]]
+  for = "/sitemap.xml"
+  [headers.values]
+    Content-Type = "application/xml"
